# MagicWand

./: CMakeLists.txt  partitions.csv  sdkconfig  version.txt  播报词列表_中文模板.xlsx
TinyML/model-parameters/: model_metadata.h  model_variables.h
TinyML/tflite-model/: tflite_learn_7_compiled.cpp  tflite_learn_7_compiled.h
components/I2Cdev/: I2Cdev.cpp
components/espressif__ir_learn/: .component_hash  idf_component.yml  ir_learn.c
components/smart_board/: PinDef.h  board.c  board.h  board_def.h  board_pins_config.c
main/: ADFNotSupportCPP.c  ASRCommonCmdList.cpp  ASRService.cpp  ASRTaskMgr.cpp  ASRTrainingModeCmdList.cpp  ASRWandModeCmdList.cpp  AudioMgr.cpp  CMakeLists.txt  CommonBase.cpp  GestureCharmCommon.cpp  GestureClassifier.cpp  GestureRecognizer.cpp  GestureSensor.cpp  HMIMgr.cpp  IRMNECEncoder.c  IRMNECEncoder.h  IRMTransceiver.cpp  IRMTransceiver.h  IngestionEI.cpp  LedStrip.cpp  MagicWand.cpp  NetworkMgr.cpp  PowerMgr.cpp  SampleRecorder.cpp  SoundPlayer.cpp  SpeechAudioCapture.cpp  TransformSensorData.cpp  VoicePrint.cpp  app_main.cpp  file_server.c  idf_component.yml  ulp_adc.c  ulp_main.c
main/Display/: LCDDev.cpp  LCDDev.h  MBaseUI.cpp  MBaseUI.h  MClockUI.cpp  MNetConnectUI.cpp  MProphetUI.cpp  MSplashUI.cpp  MUIMgr.cpp  lv_conf.h  lv_font_harmony_16.c  lv_font_siyuan_16.c  lv_font_siyuan_32.c  small.c
main/LLM/: BD_BaseService.cpp  BD_BaseService.h  BD_STTService.cpp  BD_STTService.h  MM_BaseService.cpp  MM_BaseService.h  MM_LLMService.cpp  MM_LLMService.h  MM_TTSService.cpp  MM_TTSService.h  Prophet.cpp  Prophet.h  STTService.cpp  STTService.h  XF_STTService.cpp  hw_deepseek.py
main/RemoteController/: RemoteController.cpp  RemoteController.h  ble_hid_device.cpp  esp_hid_gap.c  esp_hid_gap.h
main/include/: ADFNotSupportCPP.h  ASRService.h  ASRTaskMgr.h  AudioMgr.h  CommonBase.h  GestureCharmCommon.h  GestureClassifier.h  GestureRecognizer.h  GestureSensor.h  HMIMgr.h  IngestionEI.h  LCDDev.h  LedStrip.h  MagicWand.h  NetworkMgr.h  PowerMgr.h  SampleRecorder.h  SoundPlayer.h  SpeechAudioCapture.h  ir_db.h
main/ulp/: main.c
